# Wiimote-Car-Control-Board

controllerboardavr/: .cproject  .project  ChangeLog  Makefile.am  Makefile.in  autogen-debug.sh  config.h.in  configure  configure.ac  configure.scan  error_list.h  managed_build.txt
controllerboardavr/app/: Makefile.am  Makefile.in  controllerboardavr  main.c  program_info.h
controllerboardavr/app/avrstudio/: controllerboardavr-eclipse_sim_elf.aps  controllerboardavr-eclipse_sim_elf.aws  controllerboardavr_elf.aps  controllerboardavr_elf.aws  controllerboardavr_sim_elf.aps  controllerboardavr_sim_elf.aws  hapsim_controllerboardavr.xml  hapsim_controllerboardavr_stk500.xml
controllerboardavr/autom4te.cache/: output.0  output.1  output.2  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
controllerboardavr/common/: platform.h
controllerboardavr/common/link/avr/: atmega16.x  atmega16boot.x  atmega328.x  atmega644.x
controllerboardavr/hal_avr/: Makefile.am  Makefile.in  adc.c  comm.c  comm.h  config.h  encoder_isr.c  hw.c  hw.h  nvm.c  nvm.h  pwm.c  pwm.h  sleep.c  sleep.h  timer.c  timer.h  watchdog.c  watchdog.h
controllerboardavr/modules/: Makefile.am  Makefile.in  encoder.c  encoder.h  error_led.c  error_led.h  ir.c  ir.h  motor.c  motor.h  sensor.c  sensor.h  status_led.c  status_led.h
controllerboardavr/ref/: avrdude example command.txt  timer calc.xls
controllerboardavr/terminal/: Makefile.am  Makefile.in  command.h  command_term.c  encoder_term.c  encoder_term.h  error_led_term.c  error_led_term.h  ir_term.c  ir_term.h  motor_term.c  motor_term.h  sensor_term.c  sensor_term.h  status_led_term.c  status_led_term.h
controllerboardavr/utility/: Makefile.am  Makefile.in  debounce.c  debounce.h  error.c  error.h  led.c  led.h  pid.c  pid.h  ring_buffer.c  ring_buffer.h  tasks.c  tasks.h  timestamp.c  timestamp.h
